overlays/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortio-a
  labels:
    app: fortio-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortio-a
  template:
    metadata:
      labels:
        app: fortio-a
    spec:
      containers:
      - name: fortio
        image: fortio/fortio
        args: ["server"]
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
spec:   
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - nodeSelectorTerms:
             matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - worker1
