overlays/base/deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortio-b
  labels:
    app: fortio-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortio-b
  template:
    metadata:
      labels:
        app: fortio-b
    spec:
      containers:
        - name: fortio
          image: fortio/fortio
          args: ["server"]
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - worker1
~
