overlays/base/cartservice-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: cartservice-gw
  namespace: test
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: cartservice-vs
  namespace: test
spec:
  hosts:
  - "*"
  gateways:
  - cartservice-gw
  http:
  - route:
    - destination:
        host: cartservice.boutique.svc.cluster.local
        port:
          number: 7070
